Ajout de l'image et mise à jour de index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     Culpa laborum obcaecati atque, vero fuga, iure ad incidunt harum amet aliquid sint explicabo accusamus eveniet cumque soluta minus magnam labore ex omnis. Ullam facilis voluptate obcaecati alias molestias voluptatum.
     Perferendis natus voluptatem suscipit consectetur et reiciendis beatae dolores aut incidunt ipsam rem eum placeat deleniti, expedita labore quos libero quam aspernatur magni. Ullam eius esse, voluptatibus libero voluptates vitae.
     Architecto, vero facilis sequi dolorem perferendis accusantium! Quis, animi optio enim repellat natus minus velit id, molestias exercitationem beatae illum eligendi quaerat amet odit quos quidem dicta repudiandae aspernatur deleniti.
+   <section class="Image">
+    <img src="Image/IMG_4985-Récupéré.jpg" alt="descripstion">
+   </section>
 </body>
 </html>
